[project]
name = "perspective"
version = "1.0.0"
description = "a python wrapper for google's perspective api"
authors = [
    { name = "te", email = "thrzl@icloud.com" }
]
dependencies = [
    "aiohttp>=3.9.5",
    "orjson>=3.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["perspective"]
