[project]
name = "perspectiveapi"
version = "1.1.0"
description = "a python wrapper for google's perspective api"
authors = [
    { name = "te", email = "thrzl@icloud.com" }
]
dependencies = [
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.1",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["perspective"]
